# template_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  init.sh  run
cmake/: CompilerWarnings.cmake  CppTemplateConfig.cmake.in  GenerateAndInstallConfig.cmake  ProjectOptions.cmake  StandardProjectSettings.cmake  StaticAnalysers.cmake
src/: CMakeLists.txt  CppTemplate.cpp
src/include/: CppTemplate.h
test/: CMakeLists.txt  CppTemplateTest.cpp
